<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/new_contact_page_toolbar"/>

    <ScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_contact_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                 android:id="@+id/new_contact_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">

                 <EditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/last_name" />
                </android.support.design.widget.TextInputLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_contact_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/new_contact_add_email_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:src="@android:drawable/ic_input_add"
                    android:background="@color/bg_light"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_contact_container_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_contact_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/new_contact_add_phone_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center"
                    android:src="@android:drawable/ic_input_add"
                    android:background="@color/bg_light"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/new_contact_container_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
            <Button
                android:id="@+id/new_contact_save_contact_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:text="@string/save_contact"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
